feat(#13): изменен роут для получения отчета
